--- a/ITLog/res/layout/addproj_layout.xml
+++ b/ITLog/res/layout/addproj_layout.xml
@@ -25,6 +25,14 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
         </ListView>
+        
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
+        
     </LinearLayout>
 
 </LinearLayout>
