--- a/ITLog/res/layout/single_row_listview_addproj.xml
+++ b/ITLog/res/layout/single_row_listview_addproj.xml
@@ -9,11 +9,11 @@
         android:id="@+id/textViewAddProj"
         android:layout_width="match_parent"
         android:layout_height="86dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:background="@drawable/selector_botao_normal"
         android:gravity="left|center_vertical"
         android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:textColor="#0e7d9a"
         android:textSize="20dp" />
