--- a/ITLog/res/layout/meusprojs_layout.xml
+++ b/ITLog/res/layout/meusprojs_layout.xml
@@ -5,16 +5,6 @@
     android:background="#ebeaed"
     android:orientation="vertical" >
 
-<!--     <Spinner -->
-<!--         android:id="@+id/spinnerMeusProj" -->
-<!--         android:layout_width="fill_parent" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_marginLeft="15dp" -->
-<!--         android:layout_marginRight="15dp" -->
-<!--         android:drawSelectorOnTop="true" -->
-<!--         android:paddingBottom="15dp" -->
-<!--         android:paddingTop="15dp" /> -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,6 +15,13 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
         </ListView>
+         <ProgressBar
+            android:id="@+id/progressBar3"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
+        
     </LinearLayout>
 
 </LinearLayout>
