--- a/ITLog/res/layout/calendario_versao2.xml
+++ b/ITLog/res/layout/calendario_versao2.xml
@@ -10,7 +10,7 @@
         android:id="@+id/spinnerGridView1"
         android:layout_width="fill_parent"
         android:layout_height="120dp"
-        android:layout_margin = "15dp"
+        android:layout_margin="15dp"
         android:drawSelectorOnTop="true"
         android:paddingBottom="15dp" />
 
@@ -18,7 +18,6 @@
         android:id="@+id/rel1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:background="#ebeaed"
         android:paddingTop="15dp" >
 
@@ -29,23 +28,23 @@
             android:layout_height="match_parent"
             android:layout_weight="1" >
 
-            <android.support.v4.view.PagerTitleStrip
+            <android.support.v4.view.PagerTabStrip
                 android:id="@+id/tituloViewPagerTeste"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="35dp"
                 android:layout_gravity="top"
-                android:textAlignment="center"
                 android:background="#0e7d9a"
+                android:textAlignment="center"
                 android:textColor="#ffffff" >
-            </android.support.v4.view.PagerTitleStrip>
-            <ProgressBar
+            </android.support.v4.view.PagerTabStrip>
+        </android.support.v4.view.ViewPager>
+
+        <ProgressBar
             android:id="@+id/progressBar4"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true" />
-            
-        </android.support.v4.view.ViewPager>
+            android:layout_centerInParent="true"/>
 
         <Button
             android:id="@+id/button1"
