--- a/ITLog/res/drawable/selector_gridview_item.xml
+++ b/ITLog/res/drawable/selector_gridview_item.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--     <item android:drawable="@drawable/pressed_color" android:state_pressed="true"/> -->
-<!--     <item android:drawable="@drawable/pressed_color" android:state_focused="true"/> -->
+    <!-- <item android:drawable="@drawable/pressed_color" android:state_pressed="true"/> -->
+    <!-- <item android:drawable="@drawable/pressed_color" android:state_focused="true"/> -->
 
-    <item android:drawable="@drawable/pressed_color" android:state_selected="true"/>
-    <item android:drawable="@drawable/calendar_cell_white_2" android:state_selected="false"/>
-    
+    <item android:drawable="@drawable/calendar_cell_white_2" android:state_selected="true"/>
+    <item android:drawable="@drawable/pressed_color" android:state_selected="false"/>
+<!--     <item android:drawable="@drawable/calendar_cell_white_2"/> -->
+
     <!-- <item android:drawable="@drawable/calendar_cell_white_2" android:state_pressed="false"/> -->
     <!-- <item android:drawable="@drawable/calendar_cell_white_2" android:state_focused="false"/> -->
 
- <!-- <item android:drawable="@drawable/normal_color" -->
-    <!-- <item android:drawable="@drawable/calendar_cell" -->
 
+    <!-- <item android:drawable="@drawable/normal_color" -->
+    <!-- <item android:drawable="@drawable/calendar_cell" -->
 
 </selector>
